--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,10 +1,68 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @episode %>
+<div id="<%= dom_id @episode %>" class="list-group my-5 col">
+  <div class="list-group-item d-flex">
+    <strong>Title:</strong>
+    <%= @episode.title %>
+  </div>
+  <div class="list-group-item  d-flex">
+    <strong>Url:</strong>
+    <%= @episode.url %>
+  </div>
+  <div class="list-group-item  d-flex">
+    <strong>Is youtube:</strong>
+    <%= @episode.is_youtube ? "Yes" : "No" %>
+  </div>
+  <div class="list-group-item d-flex">
+    <strong>Already transcribed:</strong>
+    <% if @episode.srt_file.blank? %>
+      No
+    <% else %>
+      Yes (<time><%= l @episode.transcribed_at, format: :short %></time>)
+    <% end %>
+  </div>
 
-<div>
-  <%= link_to "Edit this episode", edit_episode_path(@episode) %> |
-  <%= link_to "Back to episodes", episodes_path %>
+  <div class="list-group-item btn-group d-flex">
+    <% if @episode.audio_file.blank? %>
+      <%= turbo_frame_tag dom_id(@episode,'download-episode') do %>
+        <%= link_to "Download Audio",
+          download_episode_episode_path(episode),
+          class: "btn btn-outline-primary",
+          data: { turbo_prefetch: false }
+        %>
+      <% end%>
+    <% end%>
 
-  <%= button_to "Destroy this episode", @episode, method: :delete %>
-</div>
+    <% if @episode.srt_file.present? %>
+        <%= link_to "Download Srt File", @episode.srt_file, class: "btn btn-outline-primary" %>
+    <% end %>
+
+    <% unless @episode.transcribed_at %>
+
+      <%= turbo_frame_tag dom_id(@episode,'transcribe-link') do %>
+        <%= link_to "Transcribe",
+                        transcribe_now_episode_path(@episode),
+                        class: "btn btn-outline-primary",
+                        data: { turbo_prefetch: false }
+
+            %>
+      <% end%>
+    <% end %>
+  </div>
+  <div class="list-group-item ">
+    <%= render partial: "episodes/episode_player", locals: { episode: @episode } %>
+  </div>
+
+  <div class="btn-toolbar" role="group">
+    <%= link_to "Edit this episode",
+                edit_episode_path(@episode),
+                class: "btn btn-outline-primary" %>
+    <%= link_to "Back to episodes",
+                episodes_path,
+                class: "btn btn-primary" %>
+
+    <%= button_to "Destroy this episode",
+                  @episode,
+                  class: "btn btn-outline-danger",
+                  method: :delete %>
+  </div>
