--- a/app/views/episodes/transcribe_now.html.erb
+++ b/app/views/episodes/transcribe_now.html.erb
@@ -1,3 +1,3 @@
 <%= turbo_frame_tag dom_id(@episode,'transcribe-link') do %>
-  <p class="">Transcribing...</p>
+  <p class="btn btn-outline-primary">Transcribing...</p>
 <% end %>
