--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -2,7 +2,7 @@
 <div class="grid">
   <%= render @podcast %>
 </div>
-<div class="row cols-3">
+<div class="accordion my-5">
   <%= render @podcast.episodes %>
 </div>
 <div class="btn-group" role="group" aria-label="Edit Podcast" >
