--- a/app/views/podcasts/_podcast.html.erb
+++ b/app/views/podcasts/_podcast.html.erb
@@ -1,50 +1,58 @@
-<div id="<%= dom_id podcast %>" class="card g-col-4">
+<div id="<%= dom_id podcast %>" class="card g-col-3">
   <% if podcast.image.present? %>
-    <%= image_tag podcast.image.variant(:thumb), class: 'card-img-top' %>
-  <% end%>
+    <%= image_tag podcast.image.variant(:thumb), class: "card-img-top" %>
+  <% end %>
   <div class="card-body">
     <h3 class="list-group-item card-title ">
-      <strong>Podcast:</strong>
-      <%= podcast.name %>
+      <%= link_to podcast.name, podcast, title: "Podcast #{podcast.name}" %>
     </h3>
     <div class="card-text list-group">
       <div class="list-group-item">
-        <strong>Url:</strong>
-        <%= podcast.url %>
+        <strong>Feed:</strong>
+        <%= link_to "RSS Feed",
+        podcast.xml_url,
+        title: "XML Feed for Podcast #{podcast.name}",
+        target: "_blank" %>
       </div>
       <div class="list-group-item">
-        <strong>Xml url:</strong>
-        <%= podcast.xml_url %>
+        <strong>Podcast Site:</strong>
+        <%= link_to podcast.name, podcast.url, title: "Podcast #{podcast.name}" %>
       </div>
       <div class="list-group-item">
         <strong>Active:</strong>
-        <%= podcast.active %>
+        <%= podcast.active ? "Yes" : "No" %>
       </div>
       <div class="list-group-item">
-        <strong>Has youtube:</strong>
-        <%= podcast.has_youtube %>
+        <strong>Has Youtube:</strong>
+        <%= podcast.has_youtube ? "Yes" : "No" %>
       </div>
     </div>
-    <div class="btn-group my-2" role="group" aria-label="Edit Podcast" >
-      <%= link_to "Show Podcast",
-                   podcast, class:"btn btn-outline-primary" %>
+    <div class="btn-group my-2" role="group" aria-label="Edit Podcast">
+      <%= link_to "Show Podcast", podcast, class: "btn btn-outline-primary" %>
       <%= link_to "Edit this podcast",
-                   edit_podcast_path(podcast),
-                   class:"btn btn-outline-primary" %>
+      edit_podcast_path(podcast),
+      class: "btn btn-outline-primary" %>
       <%= link_to "Destroy this podcast",
-                  podcast, data: { turbo_method: :delete},
-                  class:"btn btn-outline-primary"%>
+      podcast,
+      data: {
+        turbo_method: :delete,
+      },
+      class: "btn btn-outline-primary" %>
     </div>
     <%= turbo_frame_tag dom_id(podcast,'sync-link') do %>
-      <div class="btn-group my-2" role="group" aria-label="Edit Podcast" >
-        <% link_message = @getting_episodes ? "Just downloading ..." : "Sync Episode Metadata" %>
-        <%= link_to link_message,
-                    download_metadata_now_podcast_path(podcast),
+      <div class="btn-group my-2" role="group" aria-label="Edit Podcast">
+        <% link_message =
+          @getting_episodes ? "Just downloading ..." : "Sync Episode Metadata" %>
+        <%= link_to download_metadata_now_podcast_path(podcast),
                     class:"btn btn-outline-primary " + ("btn-disabled" || @getting_episodes),
                     data: {
                       turbo_prefetch: false
-                    } %>
+                    } do %>
+          <%= link_message %>
+          <%= turbo_stream_from "sync-link" %>
+        <% end %>
       </div>
+
     <% end %>
   </div>
 </div>
