--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="list-group-item d-flex">
     <strong>Already transcribed:</strong>
-    <% if @episode.srt_file.blank? %>
+    <% if @episode.subtitle_file.blank? %>
       No
     <% else %>
       Yes (<time><%= l @episode.transcribed_at, format: :short %></time>)
@@ -33,8 +33,8 @@
       <% end%>
     <% end%>
 
-    <% if @episode.srt_file.present? %>
-        <%= link_to "Download Srt File", @episode.srt_file, class: "btn btn-outline-primary" %>
+    <% if @episode.subtitle_file.present? %>
+        <%= link_to "Download Srt File", @episode.subtitle_file, class: "btn btn-outline-primary" %>
     <% end %>
 
     <% unless @episode.transcribed_at %>
