--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,59 +2,59 @@
 $enable-grid-classes: false;
 $enable-cssgrid: true;
 
-@import "bootstrap/mixins/banner";
+@import "../../vendor/stylesheets/bootstrap/scss/mixins/banner";
 @include bsBanner("");
 
 // scss-docs-start import-stack
 // Configuration
-@import "bootstrap/functions";
-@import "bootstrap/variables";
-@import "bootstrap/variables-dark";
-@import "bootstrap/maps";
-@import "bootstrap/mixins";
-@import "bootstrap/utilities";
+@import "../../vendor/stylesheets/bootstrap/scss/functions";
+@import "../../vendor/stylesheets/bootstrap/scss/variables";
+@import "../../vendor/stylesheets/bootstrap/scss/variables-dark";
+@import "../../vendor/stylesheets/bootstrap/scss/maps";
+@import "../../vendor/stylesheets/bootstrap/scss/mixins";
+@import "../../vendor/stylesheets/bootstrap/scss/utilities";
 
 // Layout & components
-@import "bootstrap/root";
-@import "bootstrap/reboot";
-@import "bootstrap/type";
-@import "bootstrap/images";
-@import "bootstrap/containers";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
-@import "bootstrap/transitions";
-@import "bootstrap/dropdown";
-@import "bootstrap/button-group";
-@import "bootstrap/nav";
-@import "bootstrap/navbar";
-@import "bootstrap/card";
-@import "bootstrap/accordion";
-@import "bootstrap/breadcrumb";
-@import "bootstrap/pagination";
-@import "bootstrap/badge";
-@import "bootstrap/alert";
-@import "bootstrap/progress";
-@import "bootstrap/list-group";
-@import "bootstrap/close";
-@import "bootstrap/toasts";
-@import "bootstrap/modal";
-@import "bootstrap/tooltip";
-@import "bootstrap/popover";
-@import "bootstrap/carousel";
-@import "bootstrap/spinners";
-@import "bootstrap/offcanvas";
-@import "bootstrap/placeholders";
+@import "../../vendor/stylesheets/bootstrap/scss/root";
+@import "../../vendor/stylesheets/bootstrap/scss/reboot";
+@import "../../vendor/stylesheets/bootstrap/scss/type";
+@import "../../vendor/stylesheets/bootstrap/scss/images";
+@import "../../vendor/stylesheets/bootstrap/scss/containers";
+@import "../../vendor/stylesheets/bootstrap/scss/grid";
+@import "../../vendor/stylesheets/bootstrap/scss/tables";
+@import "../../vendor/stylesheets/bootstrap/scss/forms";
+@import "../../vendor/stylesheets/bootstrap/scss/buttons";
+@import "../../vendor/stylesheets/bootstrap/scss/transitions";
+@import "../../vendor/stylesheets/bootstrap/scss/dropdown";
+@import "../../vendor/stylesheets/bootstrap/scss/button-group";
+@import "../../vendor/stylesheets/bootstrap/scss/nav";
+@import "../../vendor/stylesheets/bootstrap/scss/navbar";
+@import "../../vendor/stylesheets/bootstrap/scss/card";
+@import "../../vendor/stylesheets/bootstrap/scss/accordion";
+@import "../../vendor/stylesheets/bootstrap/scss/breadcrumb";
+@import "../../vendor/stylesheets/bootstrap/scss/pagination";
+@import "../../vendor/stylesheets/bootstrap/scss/badge";
+@import "../../vendor/stylesheets/bootstrap/scss/alert";
+@import "../../vendor/stylesheets/bootstrap/scss/progress";
+@import "../../vendor/stylesheets/bootstrap/scss/list-group";
+@import "../../vendor/stylesheets/bootstrap/scss/close";
+@import "../../vendor/stylesheets/bootstrap/scss/toasts";
+@import "../../vendor/stylesheets/bootstrap/scss/modal";
+@import "../../vendor/stylesheets/bootstrap/scss/tooltip";
+@import "../../vendor/stylesheets/bootstrap/scss/popover";
+@import "../../vendor/stylesheets/bootstrap/scss/carousel";
+@import "../../vendor/stylesheets/bootstrap/scss/spinners";
+@import "../../vendor/stylesheets/bootstrap/scss/offcanvas";
+@import "../../vendor/stylesheets/bootstrap/scss/placeholders";
 
 // Helpers
-@import "bootstrap/helpers";
+@import "../../vendor/stylesheets/bootstrap/scss/helpers";
 
 // Utilities
-@import "bootstrap/utilities/api";
+@import "../../vendor/stylesheets/bootstrap/scss/utilities/api";
 // scss-docs-end import-stack
 
-//@import "bootstrap";
+//@import "../../vendor/stylesheets/bootstrap/scss";
 
 @import "vidstack/theme";
 @import "vidstack/audio";
