--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -2,11 +2,16 @@
 <div class="grid">
   <%= render @podcast %>
 </div>
-<div class="accordion my-5">
+<div class="episodes-grid my-5">
   <%= render @podcast.episodes %>
 </div>
-<div class="btn-group" role="group" aria-label="Edit Podcast" >
-  <%= link_to "Edit this podcast", edit_podcast_path(@podcast), class:"btn btn-outline-primary" %>
-  <%= link_to "Back to podcasts", podcasts_path, class:"btn btn-outline-primary" %>
-  <%= link_to "Destroy this podcast", @podcast, method: :delete, class:"btn btn-outline-primary"%>
+<div class="btn-group" role="group" aria-label="Edit Podcast">
+  <%= link_to "Edit this podcast",
+  edit_podcast_path(@podcast),
+  class: "btn btn-outline-primary" %>
+  <%= link_to "Back to podcasts", podcasts_path, class: "btn btn-outline-primary" %>
+  <%= link_to "Destroy this podcast",
+  @podcast,
+  method: :delete,
+  class: "btn btn-outline-primary" %>
 </div>
