--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,8 @@
   $enable-cssgrid: true,
   $primary: #000000,
   $border-color-translucent: #000000,
-  $list-group-border-color: #000000);
+  $list-group-border-color: #000000,
+  $border-color: #000000);
 
 @import "vidstack/theme";
 @import "vidstack/audio";
@@ -10,6 +11,12 @@
 .accordion {
   --bs-accordion-active-color: var(--bs-gray-100);
   --bs-accordion-active-bg: var(--bs-gray-600);
+}
+
+:root {
+  --border-color: var(--bs-border-color);
+  --border-radius: var(--bs-border-radius);
+  --border-width: var(--bs-border-width);
 }
 
 .accordion-button::after {
@@ -85,4 +92,24 @@ media-player[data-preview] media-captions {
 
 .vds-audio-layout .vds-play-button {
   --default-color: var(--default-brand);
+}
+
+.episodes-grid {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-auto-flow: dense;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 15rem), 1fr));
+  grid-auto-rows: min-content auto;
+
+  &>* {
+    display: grid;
+    grid-template-rows: subgrid;
+    grid-row: span 2;
+  }
+
+  .episode {
+    border: var(--border-width) solid var(--border-color);
+    border-radius: var(--border-radius);
+  }
 }
