--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   </head>
   <body>
-    <div class="container-sm">
+    <div class="container-fluid">
       <%= yield %>
     </div>
   </body>
