--- a/app/views/podcasts/_podcast.html.erb
+++ b/app/views/podcasts/_podcast.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id podcast %>" class="card g-col-12 g-col-lg-6">
+<div id="<%= dom_id podcast %>" class="card g-col-12 g-col-sm-6 g-col-md-4 g-col-lg-3">
   <% if podcast.image.present? %>
     <%= image_tag podcast.image.variant(:thumb), class: "card-img-top" %>
   <% end %>
