buttons layout into a flexbox container and d-flex get a default row and column gap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,3 +113,8 @@ media-player[data-preview] media-captions {
     border-radius: var(--border-radius);
   }
 }
+
+.d-flex {
+  column-gap: var(--bs-flex-column-gap, 1rem);
+  row-gap: var(--bs-flex-row-gap, 1rem);
+}
